Project- ReRead using Google MLkit for Image to text conversion Added the new functionality that enables to search on google within the application and share the scanned text other application!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="your_result_will_appear_here">Your Result Will Appear Here</string>
     <string name="snap">Snap</string>
     <string name="detect">Detect</string>
+    <string name="search_on_google">Search On Google</string>
+    <string name="share_to">Share To</string>
 </resources>
